--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,6 +1,6 @@
 <html>
 <body>
-<form>
+<form action='/signup' method=POST>
 <input type=text name=name><br>
 <input type=email name=email><br>
 <input type=password name=password><br>
