--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,9 +1,10 @@
 <html>
 <body>
-<form action='/signup' method=POST>
-<input type=text name=name><br>
-<input type=email name=email><br>
-<input type=password name=password><br>
+<form action='/signup' method="POST">
+<input type=text name="name"><br>
+<input type=email name="email"><br>
+<input type=password name="password"><br>
 <input type=submit>
 </form>
+</body>
 
